ecmascript/parser/tests/test262-error-references/fail/d28e80d99f819136.js.stderr
error: Rest element must be final element
 --> $DIR/tests/test262-parser/fail/d28e80d99f819136.js:1:7
  |
1 | [, x, ...y,] = 0
  |       ^^^^

